--- a/munsoc.html
+++ b/munsoc.html
@@ -183,7 +183,7 @@
     </div>
 
     <div class="mentor">
-      <img src="padma.png" style="object-position: top;" alt="Nafisa">
+      <img src="coding.png" style="object-position: top;" alt="Nafisa">
       <h2>Nafisa – Vice President</h2>
       <p>I am passionate about teaching computer science and web development, with over 20 years of experience helping
         students learn and create with technology. My approach is hands-on and engaging, making sure everyone can
