--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                 <img class="about-me-img" src="filler.png">
             </div>
             <div class="about">
-                <h2 class = "headings-pg2" style = "text-align: right;">Devashish | Secretary</h2>
+                <h2 class = "headings-pg2" style = "text-align: right;">Devashish | President</h2>
                 <p style = "text-align: right;">
                     --<!-- President bio -->
                 </p>
@@ -219,3 +219,4 @@
 </body>
 
 </html>
+
