--- a/artpallete.html
+++ b/artpallete.html
@@ -207,9 +207,13 @@
             </div>
             
             <div class="mentor">
-                <img class="about-me-img" src="bhumika.png" object-fit: fill;>
+                <img class="about-me-img" src="Zoya.jpeg" object-fit: fill;>
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Zoya-Vice President</h2>
-                <p class = "content-2">Short bio or subject expertise.</p>
+                <p class = "content-2">"The pen is mightier than the sword” is a line I’ve heard since childhood, growing up with parents in law and a home where words carried weight. But even amid all that logic and legislation, the creative spark I carried from the moment I could hold a pencil was never dimmed.<br> Hey, I’m Butool-though most people know me as Zoya-and I have the honour of serving as the first Vice President of Art for the Palette Club. With the support and encouragement I’ve received from my school, I’ve shaped that early spark into something meaningful,something I can share and give back through the work I do and the skills I continue to build.<br>
+
+I’ve always known I wanted to design. Ever since I learned how to draw, I filled pages with characters, patterns, outfits, and anything my imagination reached for. I picked up every hobby I could-from learning new languages to pottery-to expand my horizons and explore different forms of creativity. Designing is the passion that has always spoken loudest to me, and it still drives me today: the desire to create, communicate, and bring ideas to life in a way that feels thoughtful, expressive, and personal.<br>
+
+By the words of Vincent van Gogh: “I am seeking, I am striving, I am in it with all my heart.”</p>
             </div>
             
             <div class="mentor">
@@ -232,5 +236,6 @@
     <p style="font-size: 0.75rem;">&copy; 2025 School Of India, Tech Club</p>
   </footer>
 </body>
+
 
 </html>
