--- a/clubs.html
+++ b/clubs.html
@@ -211,7 +211,7 @@ It encourages hands-on experiments, exploration, and learning beyond textbooks.
 Members dive into physics, chemistry, biology, and technology with creativity and passion.
 The club promotes scientific thinking and innovation through fun challenges and projects.
 It’s a place for questioning, testing, and understanding how the world works.
-At the Science Club, curiosity is the first step toward invention.</p>
+At the Science Club, curiosity is the first step toward invention.<br><span onclick="window.open('science.html')" class="dev"> </span></p>
             </div>
          
     </div>
@@ -230,6 +230,7 @@ At the Science Club, curiosity is the first step toward invention.</p>
     </footer>
 </body>
 </html>
+
 
 
 
