--- a/science.html
+++ b/science.html
@@ -121,7 +121,7 @@
 
     <div class="mentor">
       <img src="mentor2.png">
-      <h2>Broken Angel – Vice President</h2>
+      <h2>Dishita – Vice President</h2>
       <p>Loves experimental learning & real-world science applications.</p>
     </div>
 
