--- a/Roots and Rhythms.html
+++ b/Roots and Rhythms.html
@@ -196,7 +196,7 @@
                 <br>Thank You</p>
             </div>
             <div class="mentor">
-                <img class="about-me-img" src="mentor5.png">
+                <img class="about-me-img" src="Dhruv.jpeg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Dhruv-Secratary</h2>
                 <p class = "content-2">Short bio or subject expertise.</p>
             </div>
@@ -214,4 +214,5 @@
 
     </body>
     </html>
+
 </doctype>
