--- a/clubs.html
+++ b/clubs.html
@@ -186,7 +186,7 @@ It teaches students the importance of sustainability and eco-friendly living.
 Members take part in clean-up drives, tree-planting, and conservation campaigns.
 The club encourages innovation in solving environmental challenges.
 Every effort, big or small, adds up to a greener tomorrow.
-Together, we nurture nature — because the Earth is our shared home.</p>
+Together, we nurture nature — because the Earth is our shared home.<br><span onclick="window.open('floris.html')" class="dev"> </span></p>
             </div>
              <div class="mentor">
                 <img class="about-me-img" src="mentor5.png">
@@ -225,6 +225,7 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
+
 
 
 
