--- a/floris.html
+++ b/floris.html
@@ -139,9 +139,11 @@
 
   <div class="mentors">
     <div class="mentor">
-      <img src="mentor1.png" alt="President">
-      <h3>Ditya – President</h3>
-      <p>Passionate environmentalist working towards zero waste projects and campus sustainability.</p>
+      <img src="Ditya.jpeg" alt="President">
+      <h3>Ditya J Nair – President</h3>
+      <p>Hello There,<br>
+        I’m Ditya, the President of our school’s Environment Club, and it’s an honour to lead a team that cares deeply about our planet. I’ve always believed that even the smallest actions can create big change, and being part of this club allows me to turn that belief into real impact. As President, I want to inspire students to be more aware, take initiative, and understand that sustainability begins with everyday choices. Whether it’s organizing campaigns, spreading awareness, or introducing eco-friendly practices in school, I’m excited to guide our club toward projects that make a meaningful difference. With teamwork, creativity, and consistent effort, my goal is to make our school a greener, cleaner, and more responsible community. Together, we can build habits that last and create the kind of environment we can all be proud of.<br>Warm Regards,<br>Ditya J Nair</p>
+      
     </div>
 
     <div class="mentor">
