--- a/clubs.html
+++ b/clubs.html
@@ -118,13 +118,19 @@ I am Chaithra, and as an SST teacher, I have always believed that learning becom
         <!-- Secretary Section -->
         <div class="info-container">
             <div class="portrait">
-                <img class="about-me-img" src="anureet.png">
+                <img class="about-me-img" src="Udbhavv.jpeg">
             </div>
             <div class="about">
                 <h2 class = "headings-pg2" style = "text-align: right;">Udbhav Alam | Conceptualiser</h2>
                 <p style = "text-align: right;">
-                    Hi!<br>
-                    I'm Anureet, the secretary of our school's tech club. I've always been fascinated by how technology can turn ideas into reality, whether it's through coding, robotics, AI, or animation. As secretary, I try contributing to the team by getting innovative ideas, do all the formal stuff, and support the team in making sure our projects stay on track. I believe that technology isn't just about machines, it's about creativity, collaboration, and solving real problems in fun and innovative ways. I love contributing to a space where everyone feels encouraged to experiment, learn, and share ideas freely. I'd describe myself as chill, curious, and always ready to crack a joke, even when the Wi-Fi betrays us. One quote I really connect with is: "The best way to predict the future is to invent it." Through this club, I hope to help build a future where technology is not just smart, but meaningful.
+                    
+                    Dear Members,<br> "Courage is what it takes to stand up and speak; courage is also what it takes to sit down and listen." – Winston Churchill<br>
+I’m Udbhav, and I have the privilege of serving as the President of the MUN Society. Having chaired and represented in numerous MUNs, I’ve witnessed the power of debate, diplomacy, and dialogue firsthand. From the chaos of AIPPM to the precision of the UNSC, each experience has reinforced my belief that real change begins with meaningful discussion.
+For me, MUNs are not just simulations—they’re spaces where ideas take shape, leaders emerge, and perspectives evolve. As President, my aim is to make this society a place where curiosity thrives, opinions are respected, and every voice finds its weight in the room.
+When I’m not in committee, you’ll probably find me experimenting in the kitchen, scripting in Python, or dissecting world affairs over a late-night espresso. I believe diplomacy should be dynamic, bold, and driven by passion—and that’s exactly what I hope our MUN Society will embody.<br><br>
+Warm regards,<br>
+Udbhav Alam<br>
+President, MUN Society
                 </p>
             </div>
         </div>
@@ -225,6 +231,7 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
+
 
 
 
