--- a/clubs.html
+++ b/clubs.html
@@ -91,7 +91,7 @@
             <div class="about">
                 <h2 class = "headings-pg2" style = "text-align: right;">Shalini Ahuja | Senior Head Mistress</h2>
                 <p style = "text-align: right;">
-                    -It gives me immense pleasure to introduce our school clubs, which I truly believe are an important part of student life. Clubs give students the space to explore their interests, learn new skills, and grow in ways that the classroom alone cannot offer.<br><br>
+                    Greetings Everyone,<br>It gives me immense pleasure to introduce our school clubs, which I truly believe are an important part of student life. Clubs give students the space to explore their interests, learn new skills, and grow in ways that the classroom alone cannot offer.<br><br>
 
 As the Senior Mistress, I enjoy working closely with students and supporting their ideas and initiatives. I see clubs as places where confidence is built, leadership is discovered, and teamwork comes naturally. My aim is to ensure that every student feels encouraged to participate, express themselves freely, and make the most of the opportunities our clubs provide.<br><br>Warm Regards,<br>Shalini Ahuja,Senior Mistress
                 </p>
@@ -233,6 +233,7 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
+
 
 
 
