--- a/clubs.html
+++ b/clubs.html
@@ -207,7 +207,7 @@ Every idea is seen as a chance to make a difference in the world.
 At the Entrepreneurship Club, imagination meets opportunity to create success.<br><span onclick="window.open('entrepreneurship.html')" class="dev"> </span></p>
             </div>
             <div class="mentor">
-                <img class="about-me-img" src="mentor5.png">
+                <img class="about-me-img" src="SCI CLUB.jpeg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Science</h2>
                 <p class = "content-2">The Science Club ignites curiosity and a love for discovery among students.
 It encourages hands-on experiments, exploration, and learning beyond textbooks.
@@ -233,6 +233,7 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
+
 
 
 
