--- a/clubs.html
+++ b/clubs.html
@@ -165,7 +165,7 @@ At Art Palette, every color tells a story, and every canvas reflects pure imagin
             </div>
             
             <div class="mentor">
-                <img class="about-me-img" src="bhumika.png" object-fit: fill;>
+                <img class="about-me-img" src="munsoc.jpeg" object-fit: fill;>
                 <h2 class = "headings-pg2" style = "font-size: 25px;">MUN SOC</h2>
                 <p class = "content-2">The MUN Society is where ideas, diplomacy, and debate come together.
 It encourages students to think critically, speak confidently, and understand global issues.
@@ -187,7 +187,7 @@ At Rotary, service above self is more than a motto — it’s a way of life.<br>
             </div>
             
             <div class="mentor">
-                <img class="about-me-img" src="mentor5.png">
+                <img class="about-me-img" src="floris.jpeg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Environment</h2>
                 <p class = "content-2">The Environment Club works to protect and preserve our planet through awareness and action.
 It teaches students the importance of sustainability and eco-friendly living.
@@ -197,7 +197,7 @@ Every effort, big or small, adds up to a greener tomorrow.
 Together, we nurture nature — because the Earth is our shared home.<br><span onclick="window.open('floris.html')" class="dev"> </span></p>
             </div>
              <div class="mentor">
-                <img class="about-me-img" src="mentor5.png">
+                <img class="about-me-img" src="entreprenuership.jpeg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Entrepreneurship</h2>
                 <p class = "content-2">The Entrepreneurship Club sparks creativity, innovation, and business thinking in young minds.
 It gives students a platform to develop ideas, build startups, and learn leadership skills.
@@ -233,6 +233,7 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
+
 
 
 
