--- a/about.html
+++ b/about.html
@@ -76,10 +76,13 @@
             <a href="about.html" class="active">About Us</a>
             <a href="events.html">Events</a>
             <a href="gallery.html">Gallery</a>
-            <a href="clubs.html"><span class = "material-icons-outlined"> help </span></a>
+            <!-- <a href="clubs.html"><span class = "material-icons-outlined"> help </span></a> -->
             <div class="wrapper" style="display: inline-block; position: relative;">
                 <span style = "position: relative; top: 2px; font-size: 20px;" class="material-icons-outlined" onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=soitechclub.25@gmail.com&su=Hello&body=Hi%2C%20I%20wanted%20to%20contact%20you.', '_blank')">
                     mail
+                </span>
+                <span style = "position: relative; top: 2px; font-size: 20px;" class="material-icons-outlined" onclick="window.open('https://soitechclub25-prog.github.io/tech-club-wbst/club.html', '_blank')">
+                    help
                 </span>
             </div>
         </nav>
@@ -149,9 +152,9 @@
                 <img class="about-me-img" src="divyanshch.png">
             </div>
             <div class="about">
-                <h2 class = "headings-pg2" style = "text-align: left;">Divyansh Chauhan | Website Developer</h2>
+                <h2 class = "headings-pg2" style = "text-align: right;">Divyansh Chauhan | Website Developer</h2>
                 <p style = "text-align: left;">
-I’m a tech-driven student who’s been deeply involved with computers, coding, and digital systems for years. I actively explore programming, web development, and problem-solving—whether that’s building websites, experimenting with code, developing games, or breaking down complex concepts to understand how they really work. I enjoy learning by doing, constantly testing ideas, improving projects, and pushing my skills further. As Website Developer of the Tech Club, my goal is to collaborate and innovate while inspiring others to get curious about technology and think beyond just using it—to actually understanding and building it.                </p>
+I’m a tech-driven student who’s been deeply involved with computers, coding, and digital systems for years. I actively explore programming, web development, robotics, and problem-solving—whether that’s building websites, experimenting with code, developing games, or breaking down complex concepts to understand how they really work. I enjoy learning by doing, constantly testing ideas, improving projects, and pushing my skills further. As Website Developer of the Tech Club, my goal is to collaborate and innovate while inspiring others to get curious about technology and think beyond just using it—to actually understanding and building it.                </p>
             </div>
         </div>
         <!-- Cheesyian -->
