--- a/rotary.html
+++ b/rotary.html
@@ -168,7 +168,8 @@ As Vice President of the Rotary Club, I support the club’s vision of service, 
             
             <div class="mentor">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Poorani-Secratary</h2>
-                <p class = "content-2">Short bio or subject expertise.</p>
+                <p class = "content-2">As the Secretary of the Rotary Interact Club, I help plan meetings, keep records organised, and make sure important information is clearly communicated to everyone. I support the smooth functioning of the club by coordinating with the team and keeping track of activities and updates. With a responsible and approachable attitude, I aim to make the club more efficient, inclusive, and well-connected for all members.
+</p>
             </div>
             
             <div class="mentor">
