--- a/about.html
+++ b/about.html
@@ -193,15 +193,15 @@ I’m a tech-driven student who’s really into computers, programming, and how 
             </div>
             
             <div class="mentor">
-                <img class="about-me-img" src="mentor4.png">
+                <!-- <img class="about-me-img" src="mentor4.png"> -->
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Ms. Rupali</h2>
-                <p class = "content-2">Ms. Rupali is a computer teacher who helps students become more confident with computers and encourages them to use technology responsibly.</p>
+                <p class = "content-2">I am a computer teacher who helps students become more confident with computers and encourages them to use technology responsibly.</p>
             </div>
             
             <div class="mentor">
-                <img class="about-me-img" src="mentor5.png">
+                <!-- <img class="about-me-img" src="mentor5.png"> -->
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Ms. Neha</h2>
-                <p class = "content-2">Ms. Neha is a computer teacher who guides students in understanding essential computer concepts and using digital tools effectively in class projects.</p>
+                <p class = "content-2">I am a computer teacher who guides students in understanding essential computer concepts and using digital tools effectively in class projects.</p>
             </div>
     </div>
 
