--- a/entrepreneurship.html
+++ b/entrepreneurship.html
@@ -138,9 +138,9 @@
   <div class="mentors">
 
     <div class="mentor">
-      <h2>Ananya – President</h2>
+      <h2>Chinmayee – President</h2>
       <p>
-        Passionate about leadership and innovation, Ananya leads the club with a vision
+        Passionate about leadership and innovation, Chinmayee leads the club with a vision
         to inspire creative thinking and practical entrepreneurship among students.
       </p>
     </div>
