--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
         <!-- Tuff Section -->
         <div class="info-container">
             <div class="about">
-                <h2 class = "headings-pg2" style = "text-align: left;" onclick = "window.open('https://github.com/QuantumNeural', '_blank')">Divyansh Chauhan | Website Developer</h2>
+                <h2 class = "divya-link headings-pg2" style = "text-align: left;" onclick = "window.open('https://github.com/QuantumNeural', '_blank')">Divyansh Chauhan | Website Developer</h2>
                 <p style = "text-align: left;"> <!--[github and young age]-->
 I’m a tech-driven student who’s really into computers, programming, and how technology works behind the scenes. I spend a lot of time building and experimenting with things like websites, programs, games, and small tech projects, and I enjoy solving problems by figuring things out from scratch. I pick up new concepts quickly and like pushing myself to learn more by working on real projects. I enjoy collaborating with others, sharing ideas, and building things as a team. As the Website Developer of the Tech Club, my goal is to create solid, well-built projects and inspire others to see technology as something you can understand, build, and improve—not just use.            </div>
         <div class="portrait">
