--- a/about.html
+++ b/about.html
@@ -98,12 +98,22 @@
         <!-- President -->
         <div class="info-container">
             <div class="portrait">
-                <img class="about-me-img" src="filler.png">
             </div>
             <div class="about">
                 <h2 class = "headings-pg2" style = "text-align: right;">Devashish | President</h2>
                 <p style = "text-align: right;">
-                    Hey! I am Devashish, the President; I have a passion for leading teams and collaborating with people. I have a knack for tech and love using it.
+                    Hello Everyone,<br>
+
+I am Devasish, and I am proud to introduce myself as the President of School of India’s Tech Club. It is an honor to lead a club that promotes innovation, creativity, and teamwork. I am excited to work with our talented members and supportive teachers to make this year productive and inspiring.<br>
+
+My interest in technology comes from a strong curiosity to learn, explore, and solve problems. I believe technology is a powerful tool that helps turn ideas into reality and encourages logical thinking. With the guidance of our teachers and the enthusiasm of our members, I aim to create a collaborative environment where everyone can grow and contribute.<br>
+
+I sincerely thank my teachers for trusting me with this responsibility. I look forward to a successful and innovative year ahead.<br>
+
+This is your Tech Club President, signing off.<br><br>
+
+Warm Regards,<br>
+Devasish
                 </p>
             </div>
         </div>
@@ -158,12 +168,13 @@ I’m a tech-driven student who’s really into computers, programming, and how 
         <!-- Cheesyian -->
         <div class="info-container">
             <div class="portrait">
-                <img class="about-me-img" src="filler.png">
             </div>
             <div class="about">
                 <h2 class = "headings-pg2" style = "text-align: right;">Chezhian | Content Creator</h2>
                 <p style = "text-align: right;">
-                    I am Chezian, and I teach animation here at the Tech Club. I love helping people learn new things and collaborating in teams.
+                    I am Chezhian, a student who enjoys exploring the creative side of technology. I have a strong interest in animation and digital visuals, and I like bringing ideas to life through motion and design. Learning new tools and experimenting with different styles motivates me to improve and think creatively.
+
+I enjoy helping others understand animation in a simple and practical way, and I believe creativity grows best when ideas are shared. Through the Tech Club, I hope to encourage students to explore animation, express their ideas, and build confidence in their creative skills.
                 </p>
             </div>
         </div>
@@ -197,13 +208,13 @@ I’m a tech-driven student who’s really into computers, programming, and how 
             <div class="mentor">
                 <!-- <img class="about-me-img" src="mentor4.png"> -->
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Ms. Rupali</h2>
-                <p class = "content-2">I am a computer teacher who helps students become more confident with computers and encourages them to use technology responsibly.</p>
+                <p class = "content-2">I am glad to be a mentor for the School of India’s Tech Club. As an English teacher, I believe communication and creativity are just as important as technical skills. I look forward to supporting students in expressing their ideas clearly and confidently.</p>
             </div>
             
             <div class="mentor">
                 <!-- <img class="about-me-img" src="mentor5.png"> -->
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Ms. Neha</h2>
-                <p class = "content-2">I am a computer teacher who guides students in understanding essential computer concepts and using digital tools effectively in class projects.</p>
+                <p class = "content-2">I am happy to be a mentor for the School of India’s Tech Club. As a Mathematics teacher, I believe logical thinking and problem-solving are essential skills that connect strongly with technology. I look forward to guiding and supporting the students in their learning journey.</p>
             </div>
     </div>
 
@@ -220,4 +231,5 @@ I’m a tech-driven student who’s really into computers, programming, and how 
 </body>
 
 </html>
+
 
