--- a/Roots and Rhythms.html
+++ b/Roots and Rhythms.html
@@ -157,15 +157,22 @@
             <div class="mentor">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Sandra-President</h2>
                 <p class = "content-2">
-                    I'm super proud to introduce myself as one of the first mentors of the tech club! Tech has been something I've been passionate about for as long as I can remember — from writing my first few lines of code to diving deep into CS, AI, Data Science at Information Technology. Being part of this club and helping others explore, innovate, and learn is something that genuinely excites me. Can't wait to grow together and see where this journey takes us.
+                    Hello Everyone,<br>
+
+I am proud to introduce myself as the President of the Music Club. Music has always been a powerful way for me to express creativity and emotion. I look forward to working with our talented members and making this year full of rhythm, learning, and harmony.<br><br>
+
+Warm Regards,<br>Sandra
                 </p>
             </div>
             
             <div class="mentor">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Anshika-President</h2>
                 <p class = "content-2">
-                    I am passionate about teaching computer science and web development, with over 20 years of experience helping students learn and create with technology. My approach is hands-on and engaging, making sure everyone can understand and apply new concepts. I love to see my students succeed—whether it’s building their first website or mastering new coding languages. Staying up to date with the latest trends keeps my classes fresh and practical. I believe every student has the potential to shine and I’m proud to help guide them on their digital journey.
-                </p>
+                    Hello Everyone,<br>
+
+I am proud to introduce myself as the President of the Dance Club. Dance is a powerful form of expression that brings energy, creativity, and confidence. I look forward to working with our talented members and making this year exciting and memorable.<br><br>
+
+Warm Regards,<br>Anshika
             </div>
             
             <div class="mentor">
@@ -215,6 +222,7 @@
     </html>
 
 </doctype>
+
 
 
 
