--- a/floris.html
+++ b/floris.html
@@ -148,12 +148,20 @@
 
     <div class="mentor">
       <h3>Rishita – Vice President</h3>
-      <p>Believes change begins with awareness and teamwork. Leads event coordination & campaigns.</p>
+      <p>Hello Everyone,<br>
+
+I am proud to introduce myself as the Vice President of the Environment Club. I am passionate about protecting nature and spreading awareness about sustainability and environmental responsibility. I look forward to working with our members to promote eco-friendly initiatives and make a positive impact.<br><br>
+
+Warm Regards,<br>Rishita</p>
     </div>
 
     <div class="mentor">
       <h3>Nelisha – Secretary</h3>
-      <p>Handles communication, planning, and documentation for all club initiatives.</p>
+      <p>Hello Everyone,<br>
+
+I am happy to serve as the Secretary of the club. I look forward to supporting the team by staying organized, coordinating activities, and ensuring smooth communication. I am excited to work with everyone for a successful year ahead.<br><br>
+
+Warm Regards,<br>Nelisha</p>
     </div>
   </div>
 
