--- a/artpallete.html
+++ b/artpallete.html
@@ -172,7 +172,7 @@ As the President of Art Palette, I see art as a form of expression rather than p
 
     <div class="mentor">
       <img src="Zoya.jpeg">
-      <h2>Zoya-Vice President</h2>
+      <h2>Butul Zaidi-Vice President</h2>
       <p>
         "The pen is mightier than the sword” is a line I’ve heard since childhood, growing up with parents in law
         and a home where words carried weight. But even amid all that logic and legislation, the creative spark I
@@ -217,6 +217,7 @@ To me, art is an emotion before it is a skill. You don’t have to be “good”
 </body>
 
 </html>
+
 
 
 
