--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                 <p style = "text-align: right;">
                     Hello Everyone,<br>
 
-I am Devasish, and I am proud to introduce myself as the President of School of India’s Tech Club. It is an honor to lead a club that promotes innovation, creativity, and teamwork. I am excited to work with our talented members and supportive teachers to make this year productive and inspiring.<br>
+I am Devashish, and I am proud to introduce myself as the President of School of India’s Tech Club. It is an honor to lead a club that promotes innovation, creativity, and teamwork. I am excited to work with our talented members and supportive teachers to make this year productive and inspiring.<br>
 
 My interest in technology comes from a strong curiosity to learn, explore, and solve problems. I believe technology is a powerful tool that helps turn ideas into reality and encourages logical thinking. With the guidance of our teachers and the enthusiasm of our members, I aim to create a collaborative environment where everyone can grow and contribute.<br>
 
@@ -231,6 +231,7 @@ I enjoy helping others understand animation in a simple and practical way, and I
 </body>
 
 </html>
+
 
 
 
