--- a/clubs.html
+++ b/clubs.html
@@ -166,7 +166,7 @@ At Art Palette, every color tells a story, and every canvas reflects pure imagin
             </div>
             
             <div class="mentor">
-                <img class="about-me-img" src="munsoc.jpeg" object-fit: fill;>
+                <img class="about-me-img" src="munsoclogo.jpg" object-fit: fill;>
                 <h2 class = "headings-pg2" style = "font-size: 25px;">SOI ComMUNnity<br>MUN and Debating Club</h2>
                 <p class = "content-2">The MUN Society is where ideas, diplomacy, and debate come together.
 It encourages students to think critically, speak confidently, and understand global issues.
@@ -187,16 +187,16 @@ Every project helps students grow as leaders with purpose and heart.
 At E-Rotary, service above self is more than a motto — it’s a way of life.<br><span onclick="window.open('rotary.html')" class="dev"> </span></p>
             </div>
             
-            <a href="floris.html"><div class="mentor">
-                <a href="floris.html"><img class="about-me-img" src="floris.jpeg"></a>
+            <div class="mentor">
+                <a href="floris.html"><img class="about-me-img" src="environment.jpeg"></a>
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Environment Club</h2>
                 <p class = "content-2">The Environment Club works to protect and preserve our planet through awareness and action.
 It teaches students the importance of sustainability and eco-friendly living.
 Members take part in clean-up drives, tree-planting, and conservation campaigns.
 The club encourages innovation in solving environmental challenges.
 Every effort, big or small, adds up to a greener tomorrow.
-Together, we nurture nature — because the Earth is our shared home.<br><span onclick="window.open('floris.html')" class="dev"> </span></p>
-            </div></a>
+Together, we nurture nature — because the Earth is our shared home.<br><a href="floris.html">Explore</a><span onclick="window.open('floris.html')" class="dev"> </span></p>
+            </div>
              <div class="mentor">
                 <img class="about-me-img" src="entreprenuership.jpeg">
                 <h2 class = "headings-pg2" style = "font-size: 25px;">Entrepreneurship Club</h2>
@@ -234,6 +234,7 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
+
 
 
 
