--- a/clubs.html
+++ b/clubs.html
@@ -44,7 +44,7 @@
         <div class = "soi"> <!--School Of India Logo-->
             <div class="wrapper">
                 <a href="https://schoolofindia.com" target="_blank">
-                    <img class = "soi-logo" src="soi-logo.png">
+                    <img class = "soi-logo" src="soilogo.png">
                 </a>
             </div>
             <div class="wrapper">
@@ -76,7 +76,7 @@
             <a href="about.html">About Us</a>
             <a href="events.html">Events</a>
             <a href="gallery.html">Gallery</a>
-            <a href="clubs.html">Clubs</a>
+            <a href="clubs.html" class="active">Clubs</a>
             <div class="wrapper" style="display: inline-block; position: relative;">
                 <span style = "position: relative; top: 2px; font-size: 20px;" class="material-icons-outlined" onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=soitechclub.25@gmail.com&su=Hello&body=Hi%2C%20I%20wanted%20to%20contact%20you.', '_blank')">
                     mail
@@ -234,6 +234,7 @@ At the Science Club, curiosity is the first step toward invention.<br><span oncl
     </footer>
 </body>
 </html>
+
 
 
 
