--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </p>
 
     <p class="content">
-        We are truly grateful to the School Of India for introducing different kinds of clubs to help
+        We are truly grateful to the School Of India for introducing different clubs to help
         students, as these clubs ensure both academic and personal growth. It's not just about reading from books— it's more about trying things out. Coding, experiments, small projects, or even random ideas we come up with— that's exactly what we do here in the Tech Club.
         <br><br>
         The Tech Club is a place where we focus on growth in technology and learn coding, which helps us improve logical and analytical thinking. It is here to fuel your curiosity in technology. This club is made for students who are deeply interested in the growth of the world through technology and who believe in bringing change through innovation.
@@ -115,6 +115,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
