--- a/munsoc.html
+++ b/munsoc.html
@@ -157,9 +157,9 @@
 <body>
   <header class="mheader">
     <a href="https://schoolofindia.com" target="_blank">
-      <img src="soi-logo.png" alt="School of India Logo">
+      <img src="soilogo.png" alt="School of India Logo">
     </a>
-    <h1>MUN Society</h1>
+    <h1>SOI ComMUNity</h1>
   </header>
 
   <h2>Greetings Everyone,</h2>
@@ -188,7 +188,7 @@ When I’m not in committee, you’ll probably find me experimenting in the kitc
 <br>
 Warm regards,<br>
 Udbhav Alam<br>
-President, MUN Society</p>
+President, SOI ComMUNity</p>
     </div>
 
     <div class="mentor">
@@ -229,7 +229,6 @@ For me, MUN is the perfect place to combine clear communication with sharp organ
       and
       <span class="dev" onclick="window.open('https://github.com/Hamprogrammer', '_blank')">Hamiz</span>
     </p>
-    <p>Blueprinted by Vaibhavi and Dhruv</p>
     <p>&copy; 2025 School Of India, Tech Club</p>
   </footer>
 </body>
