--- a/rotary.html
+++ b/rotary.html
@@ -132,7 +132,11 @@
     display: block;
 }
 
-
+header img {
+      width: 80px;
+      border-radius: 50%;
+      border: 2px solid #4CCB7B;
+    }
 
 
 
@@ -143,7 +147,7 @@
         <header>
 
                 <a href="https://schoolofindia.com" target="_blank">
-                    <img class = "soi-logo" src="soi-logo.png">
+                    <img class = "soi-logo" src="soilogo.png">
                 </a>
             <h1>Rotary Interact Club</h1>
 
@@ -213,6 +217,7 @@ As Vice President of the Rotary Club, I support the club’s vision of service, 
     </html>
 
 </doctype>
+
 
 
 
