--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ I sincerely thank my teachers for trusting me with this responsibility. I look f
 This is your Tech Club President, signing off.<br><br>
 
 Warm Regards,<br>
-Devasish
+Devashish
                 </p>
             </div>
         </div>
@@ -229,6 +229,7 @@ I enjoy helping others understand animation in a simple and practical way, and I
 </body>
 
 </html>
+
 
 
 
