--- a/MUN.html
+++ b/MUN.html
@@ -19,10 +19,10 @@
       animation: fadeIn 1.2s ease-in-out forwards;
     }
 
-    @keyframes fadeIn {
+    /* @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
-    }
+    } */
 
     /* Header */
     .mheader {
