--- a/MUN.html
+++ b/MUN.html
@@ -171,7 +171,7 @@
   <div class="mentors">
     <div class="mentor">
       <img src="udbhav.jpeg" alt="Udbhav Alam">
-      <h2>Udbhav Alam – President</h2>
+      <h2>Udbhav Alam | President</h2>
       <p>Dear Members,
 
 "Courage is what it takes to stand up and speak; courage is also what it takes to sit down and listen." – Winston Churchill
@@ -189,7 +189,7 @@ President, SOI ComMUNity</p>
 
     <div class="mentor">
       <img src="nafisaa.jpeg" style="object-position: top;" alt="Nafisa">
-      <h2>Nafisa – Vice President</h2>
+      <h2>Nafisa | Vice President</h2>
       <p>Hey,
 <br>
 I'm Nafisa of class 9, and it's such a great opportunity for me to be able to introduce myself as the very first Vice President of the MUN Club here at School of India; and being part of this community has been a very fresh and exciting experience added to my school life. Over the course of just five conferences in one year, I’ve learned far more than just speaking or debating—I’ve learned how to listen, understand different perspectives, research responsibly, and work with people who think completely differently from me. I’ve been fortunate to receive awards like Best Delegate, Commendation, and Special Mention, but I see them more as reminders of how much I’ve grown rather than achievements on their own.
@@ -205,7 +205,7 @@ Nafisa</p>
     </div>
 
     <div class="mentor">
-      <h2>Gianna – Secretary</h2>
+      <h2>Gianna | Secretary</h2>
       <p>Hi, I’m Gianna, and I proudly serve as the Secretary of the MUN Society. I’m a confident speaker and an even more confident organiser, whether it’s during heated debate or while coordinating everything behind the scenes for our society. Put me in a room full of delegates and I will make sure every voice is heard, every point is noted, and every session runs smoothly.
 ​
 
@@ -213,7 +213,7 @@ For me, MUN is the perfect place to combine clear communication with sharp organ
     </div>
 
     <div class="mentor">
-      <h2>Mitali – Treasurer</h2>
+      <h2>Mitali | Treasurer</h2>
       <p>Hey, I’m Mitali, and I’m the Treasurer of the MUN Society. My role may sound like it’s all about money, but honestly, it’s more of a trust and responsibility position than anything else. I didn’t take this up because I’m obsessed with funds; I took it up because I’m organised, dependable, and good at keeping track of things that matter to the club.</p>
     </div>
   </div>
