--- a/MUN.html
+++ b/MUN.html
@@ -7,6 +7,13 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
+  <!-- Inter -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+      href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+  
   <style>
     html, body {
       height: 100%;
